<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">XMLParsing</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="fromCurr">From:</string>
    <string name="toCurr">To:</string>
    <string name="rateCalc">Calculate</string>
    <string name="editTxtHint">Value</string>
    <string name="title_activity_settings">Settings</string>
    <string name="UpdateCurrInter">Update Currency Interval</string>
    <string name="changeBackgroundColor">Background color</string>
    
    <string-array name="stringBackgroundColor">
        <item>Black</item>
        <item>Blue</item>
        <item>Green</item>
        <item>White</item>
    </string-array>
    
    <string-array name="backgroundColorValues">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

</resources>
